// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.tsx empty order 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Kekland
    </span>
    <span
      id="date"
    >
      1707
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;

exports[`Order.tsx empty order 2`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Loland
    </span>
    <span
      id="date"
    >
      1707
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;

exports[`Order.tsx not empty order 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Kekland
    </span>
    <span
      id="date"
    >
      1707
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
    >
      kek
    </div>
    <div
      className="Order-item"
    >
      lol
    </div>
  </div>
</div>
`;
